--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run:
           command: |
             python3 -m venv venv
-            . venv/Scripts/activate
+            . venv/bin/activate
             pip3 install --upgrade pip
             pip3 install -r requirements.txt
       - save_cache:
