--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip3 install --upgrade pip
-            pip3 install –upgrade setuptools
+            pip3 install --upgrade setuptools
             pip3 install -r requirements.txt
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
