--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ db.sqlite3
 # Static folder at project root
 /static/
 
+# Media folder specifics
+/media/profile_pictures
+
 # macOS
 ._*
 .DS_Store
